# sim6502

./: .gitignore  README.md  meson-generate.sh  meson.build  sim6502.c
src/: .astylerc  config_sim6502.h.in  main.c  sim6502.c  sim6502.h
